--- a/app/scss/settings/_fonts.scss
+++ b/app/scss/settings/_fonts.scss
@@ -1,14 +1,12 @@
-//example
-
-// @font-face {
-//   font-family: 'HelveticaLight';
-//   src: url('/fonts/HelveticaLight.woff') format('woff');
-//   font-weight: 300;
-//   font-style: normal;
-// }
-// @font-face {
-//   font-family: 'HelveticaLight';
-//   src: url('/fonts/HelveticaLight.woff2') format('woff2');
-//   font-weight: 300;
-//   font-style: normal;
-// }
+@font-face {
+  font-family: 'PrataRegular';
+  src: url('/fonts/Prata-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'PrataRegular';
+  src: url('/fonts/Prata-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+}
