--- a/app/scss/settings/_global.scss
+++ b/app/scss/settings/_global.scss
@@ -1,31 +1,159 @@
 html,
 body {
-  overflow-x: hidden;
-  height: 100%;
-  color: #051B1F;
-  ;
+    // overflow-x: hidden;
+    height: 100%;
+    color: rgb(255, 255, 255);
+    background-color: rgb(31, 31, 31);
+    font-family: Arial;
+    scroll-behavior: smooth;
 }
 
 .box {
-  height: 100vh;
-  width: 100vw;
+    height: 100vh;
+    width: 100vw;
+    background-image: url('/images/screen-img.png');
+    background-repeat: no-repeat;
+    background-position: 178%;
+    background-size: contain;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .wrapper {
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
 }
 
 .main {
-  flex: 1 0 auto;
+    flex: 1 0 auto;
 }
 
 .footer {
-  flex: 0 0 auto;
+    flex: 0 0 auto;
 }
 
 .container {
-  width: 80%;
-  margin: 0 auto;
+    width: 83.17%;
+    margin: 0 auto;
+}
+
+.btn {
+    cursor: pointer;
+    color: rgb(34, 34, 34);
+    font-family: Arial;
+    @include adaptiv-font(24, 15);
+    font-weight: 700;
+    line-height: 150%;
+    text-align: center;
+    text-transform: uppercase;
+    border-radius: 4px;
+    background-color: rgb(255, 255, 255);
+    padding: 32px 50px;
+    transition: all .3s;
+    border: 1px solid transparent;
+
+    &:hover {
+        background-color: rgb(34, 34, 34);
+        color: rgb(255, 255, 255);
+        border: 1px solid rgb(255, 255, 255);
+    }
+}
+
+.logo {
+    font-family: PrataRegular;
+    @include adaptiv-font(36, 15);
+    font-weight: 400;
+    text-transform: uppercase;
+    margin-right: 215px;
+    color: rgb(255, 255, 255);
+}
+
+.list {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+
+    &-item {
+        font-family: Arial;
+        font-style: italic;
+        @include adaptiv-font(17, 9);
+        font-weight: 400;
+        text-transform: uppercase;
+
+        &:not(:last-child) {
+            @include adaptiv-marginRight(30, 13);
+        }
+    }
+
+    &-link {
+        color: rgb(255, 255, 255);
+        position: relative;
+        display: inline-block;
+        text-decoration: none;
+        overflow: hidden;
+
+        &::before {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            background-color: rgb(255, 255, 255);
+            transition: transform 0.3s ease;
+            transform: scaleX(0);
+            transform-origin: bottom right;
+        }
+
+        &:hover::before {
+            transform: scaleX(1);
+            transform-origin: bottom left;
+        }
+    }
+}
+
+
+@media (max-width: 1600px) {
+    .box {
+        height: auto;
+    }
+}
+
+@media (max-width: 1400px) {
+    .box {
+        position: relative;
+
+        &::before {
+            position: absolute;
+            content: '';
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            background-color: rgba(0, 0, 0, 0.432);
+        }
+    }
+}
+
+@media (max-width: 1100px) {
+    .box{
+        background-size: cover;
+        background-position: 100%;
+    }
+}
+
+@media (max-width: 800px) {
+    .logo{
+        margin-right: 0;
+    }
+}
+
+@media (max-width: 550px){
+    .btn{
+        height: auto !important;
+        padding: 15px 50px !important;
+    }
 }
