--- a/app/scss/settings/_fonts.scss
+++ b/app/scss/settings/_fonts.scss
@@ -1,12 +1,12 @@
 @font-face {
   font-family: 'PrataRegular';
-  src: url('/fonts/Prata-Regular.woff') format('woff');
+  src: url('../fonts/Prata-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: 'PrataRegular';
-  src: url('/fonts/Prata-Regular.woff2') format('woff2');
+  src: url('../fonts/Prata-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
 }
