--- a/app/scss/settings/_global.scss
+++ b/app/scss/settings/_global.scss
@@ -11,7 +11,7 @@ body {
 .box {
     height: 100vh;
     width: 100vw;
-    background-image: url('/images/screen-img.png');
+    background-image: url('../images/screen-img.png');
     background-repeat: no-repeat;
     background-position: 178%;
     background-size: contain;
